--- a/css/index.css
+++ b/css/index.css
@@ -128,21 +128,22 @@ a{
   position: relative;
   width: 100%;
   margin: 0 auto;
+  height: 50rem;
 }
 .top_block-content{
   position: absolute;
   width: 100%;
-  margin-top: -30%;
+  top: 400px;
 }
 .top_block-ttl{
-  font-size: 3vw;
+  font-size: 50px;
   font-weight: 500;
   color: white;
   text-align: center;
 }
 .top_block-text{
   color: white;
-  font-size: 1vw;
+  font-size: 20px;
   font-weight: bold;
   text-align: center;
   margin-top: 20px;
@@ -150,21 +151,23 @@ a{
 
 .company_text{
   width: 100%;
-  height: 300px;
   background: #27292b;
   margin-top: -10px;
 }
+.company_text-content{
+  width: 80%;
+  margin: 0 auto;
+}
 .company_text-ttl{
   color: white;
-  font-size: 2vw;
-  margin: 0 0 30px 120px;
-  padding-top: 100px;
+  font-size: 30px;
+  padding-top: 80px;
 }
 .company_text-item{
   color: white;
-  font-size: 1vw;
+  font-size: 15px;
   line-height: 30px;
-  margin: 0 120px;
+  padding: 50px 0;
 }
 
 .service{
@@ -175,7 +178,7 @@ a{
   margin: 0 auto;
 }
 .service_ttl-text{
-  font-size: 2vw;
+  font-size: 30px;
   font-weight: bold;
   text-align: center;
   margin: 50px auto 30px;
@@ -268,6 +271,7 @@ a{
 .blog_card-content-item-text{
   font-size: 17px;
   font-weight: bold;
+  margin-bottom: 10px;
 }
 .blog_card-content-item-text:hover{
   opacity: 0.7;
@@ -478,7 +482,7 @@ a{
   margin-left: 80px;
 }
 .footer_nav{
-  margin-right: 50px;
+  margin-right: 10px;
 }
 .footer_nav-list{
   display: flex;
@@ -508,7 +512,7 @@ a{
   }
     .footer_nav-item{
       border: none;
-      margin: 10px 10px;
+      margin: 20px 10px;
     }
     .copyright{
       margin-top: 70px;
